--- a/word unscrambler/unscrambler/index.html
+++ b/word unscrambler/unscrambler/index.html
@@ -5,23 +5,32 @@
 	<link href="/icons/unscramble-48.png" rel="shortcut icon" type="image/png">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0' name='viewport' />
+	<script
+	src="/jquery-3.3.1.min.js" type= "text/javascript"></script>
 	<title>Word Unscrambler</title>
 	<link href="design.css" rel="stylesheet">
+	
+	
 </head>
 <body>
-	<header>
-		<h1 class="header"> Word Unscrambler </h1>
+	<header class="site-header">
+		<h1> Word Unscrambler </h1>
 	</header>
-	<div class=content>
+
+	<div class="page-content">
 		<div wrapper>
 			<label for="letters">Letters</label>
 			<input type="text" id="letters"/>
-			<div class="button search" onclick="findWords()">Find Words</div>
+			<button id="findbtn" class="button search">Find Words</button>
 			<pre id="words"></pre>
+			<ul id="resultlist">
+			</ul>
 		</div>
 	</div>
-<script src="./ScrabbleDict.js"></script>
-<script src="js/WordFinder.js"></script>
-<script src="js/index.js"></script>
+	<script src="js/index.js" type= "text/javascript"></script>
+	<script src="/dic/ScrabbleDict.js" type= "text/javascript"></script>
+	<script src="js/WordFinder.js" type= "text/javascript"></script>
+	<!-- <script src="js/WordFinder.js" type="module"></script> -->
+	<!-- <script src="./ScrabbleDict.js" type="module"></script> -->
 </body>
 </html>
