Added new feature
- Select element to higlight and click "Clear Selected" button to remove list items.

--- a/word unscrambler/unscrambler/index.html
+++ b/word unscrambler/unscrambler/index.html
@@ -19,10 +19,15 @@
 
 	<div class="page-content">
 		<div wrapper>
+		<section>
 			<label for="letters">Letters</label>
 			<input type="text" id="letters"/>
 			<button id="findbtn" class="button search">Find Words</button>
 			<pre id="words"></pre>
+			</section>
+			<section>
+			<button id="clearbtn" class="button clear">Clear Selected</button>
+			</section>
 			<ul id="resultlist">
 			</ul>
 		</div>
@@ -33,4 +38,7 @@
 	<!-- <script src="js/WordFinder.js" type="module"></script> -->
 	<!-- <script src="./ScrabbleDict.js" type="module"></script> -->
 </body>
+<footer>
+<small><b>Words Unscrambler 2018</b></small></br>
+<small>by tth1997</small>
 </html>
