Added Total Results display.

--- a/word unscrambler/unscrambler/index.html
+++ b/word unscrambler/unscrambler/index.html
@@ -26,7 +26,8 @@
 			<pre id="words"></pre>
 			</section>
 			<section>
-			<button id="clearbtn" class="button clear">Clear Selected</button>
+			<p id="totalwords">Total Results: </p>
+			<button id="clearbtn" class="button clear">Delete Selected</button>
 			</section>
 			<ul id="resultlist">
 			</ul>
