--- a/word unscrambler/unscrambler/index.html
+++ b/word unscrambler/unscrambler/index.html
@@ -7,14 +7,14 @@
 	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0' name='viewport' />
 	<script
 	src="/jquery-3.3.1.min.js" type= "text/javascript"></script>
-	<title>Word Unscrambler</title>
+	<title>Words Unscrambler</title>
 	<link href="design.css" rel="stylesheet">
 	
 	
 </head>
 <body>
 	<header class="site-header">
-		<h1> Word Unscrambler </h1>
+		<h1> Words Unscrambler </h1>
 	</header>
 
 	<div class="page-content">
@@ -27,7 +27,7 @@
 			</section>
 			<section>
 			<p id="totalwords">Total Results: </p>
-			<button id="clearbtn" class="button clear">Delete Selected</button>
+			<button id="clearbtn" class="button clear">Clear Selected</button>
 			</section>
 			<ul id="resultlist">
 			</ul>
